tests/typerel/tno_int_in_bool_context.nim
discard """
  errormsg: "type mismatch: obtained <int literal(1)> expected 'bool'"
  line: 6
"""

if 1:
  echo "wtf?"
